apps/toggler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toggler
  namespace: default
spec:
  selector:
    app: toggler
  ports:
    - name: http
      port: 8080
      targetPort: http
