apps/toggler/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toggler
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: toggle.h18s.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: toggler
                port:
                  number: 8080
